# libaurora

./: CMakeLists.txt  Readme.markdown
cmake/: FindBsonBind.cmake
include/kipr/: compat.hpp  graphics-characters.h  graphics-key-code.h  graphics.h  util.h
msg/: aurora_frame.bsonbind  aurora_key.bsonbind  aurora_mouse.bsonbind
src/: daylite-node.cpp  daylite-node.hpp  graphics-characters.c  graphics.cpp  raster-graphics-buffer.cpp  raster-graphics-buffer.hpp  time_p.cpp  util.cpp
